fix(form) spacing for overflowing checkbox highlight. spacing for footer in volume creation in modal during instance edit/create. avoid cluster member specific toggle in one node clusters. fixes #1862

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -383,6 +383,18 @@
   }
 }
 
+.form-contents:has(.content-details > .row) {
+  padding-left: 0;
+
+  .content-details {
+    max-width: 56.5rem;
+
+    > * {
+      padding-left: 2.5rem;
+    }
+  }
+}
+
 .edit-instance {
   .form-footer {
     .bottom-btns {
