--- a/src/sass/_storage_volume_form.scss
+++ b/src/sass/_storage_volume_form.scss
@@ -21,4 +21,8 @@
     min-height: 100%;
     padding-bottom: 0;
   }
+
+  .create-volume-modal-footer {
+    padding-bottom: 1rem;
+  }
 }
